--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,12 +16,30 @@
         </nav>
     </nav>
     <div class="content">
-        <div class="dd">
+        <div class="dd" data-aos="fade-up" data-aos-duration="1000">
             <h1>My name is Kittipon Thanee</h1>
-            <p>I'm 15 years old, I'm Students at Pakkred Secondary School</p>
+            <p>I'm 15 years old, I'm Student at Pakkred Secondary School</p>
             <p>Skills: C, Nodejs, Python, MySQL, HTML, CSS</p>
-            <button class="blue-button"><a href="https://discord.com/api/oauth2/authorize?client_id=721287837898768456&permissions=8&scope=bot">INVITE MY DISCORD BOT</a></button>
         </div>
     </div>
+    <div class="project" data-aos="fade-down" data-aos-duration="1000">
+        <h1>รอยิงพี่ Discord bot สุดตึง</h1>
+        <button class="blue-button"><a href="https://discord.com/api/oauth2/authorize?client_id=721287837898768456&permissions=8&scope=bot">Invite</a></button>
+        <h3>funtion ตามด้านล่างนี้</h3>
+    </div>
+    <div class="bot-content" data-aos="fade-right" data-aos-duration="1000">
+        <div class="item">
+            <h1>/ping</h1>
+            <p>จะส่งคำว่า " Pong!!!" กลับมาให้คุณ</p>
+        </div>
+        <div class="item">
+            <h1>/nuke</h1>
+            <p>จะสร้างห้องรัวๆจำนวน 500 ห้อง</p>
+        </div>
+    </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
