add loading screen and icon

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,14 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+#preloader {
+    background: white url(/static/suss.gif) no-repeat center center;
+    background-size: 30%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+  }
 a {
     text-decoration: none;
     color: white;
