--- a/views/partials/basehead.hbs
+++ b/views/partials/basehead.hbs
@@ -7,3 +7,4 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@800&family=IBM+Plex+Sans+Thai+Looped&family=Jost:wght@600&display=swap" rel="stylesheet">
 <title>{{ customtitle }}</title>
+<link rel="icon" type="image/x-icon" href="/static/icon.ico">
