--- a/static/style.css
+++ b/static/style.css
@@ -9,14 +9,69 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-#preloader {
-    background: white url(/static/suss.gif) no-repeat center center;
-    background-size: 30%;
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    z-index: 100;
+.pagecontent {
+    display: none;
+}
+  .lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    4.9% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    5% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+
+.fade-content {
+    animation-name: fade;
+    animation-duration: 2s;
+}
+
+@keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
 a {
     text-decoration: none;
     color: white;
@@ -65,42 +120,13 @@ a {
     color: #fff;
 }
 .content{
-    position: relative;
-    width: 35%;
-    margin: auto;
-    top: 100px;
-    border-radius: 10%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .dd {
     margin: 10px;
     text-align: center;
     color: white;
 }
-.project {
-    position: relative;
-    text-align: center;
-    color: white;
-    top: 500px;
-}
-.bot-stats {
-    background-color: rgb(35, 36, 40);
-    display: inline-flex;
-    width: 300px;
-}
-.profile {
-    border-radius: 50%;
-    width: 80px;
-}
-.bot-content {
-    position: relative;
-    top: 600px;
-    margin: auto;
-    background-color: rgb(43, 45, 49);
-    max-width: 400px;
-    border-radius: 15%;
-}
-.blue-button {
-    background-color: #7289da;
-    border: 2px solid #7289da;
-    color: #fff;
-  }
