--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,33 +6,36 @@
 <body onload="sss()">
     <div class="lds-ripple" id="preloader"><div></div><div></div></div>
     <div class="pagecontent fade-content" id="pagecontent">
-        <nav class="blur">
-            <nav class="menu-bar">
-                <div class="group">
-                </div>
-                <div class="group">
-                    <a class="item" href="/">HOME</a>
-                    <a class="item" href="https://github.com/namo5758">GITHUB</a>
-                    <a class="item title">! ℕ𝔸𝕄𝕆#5179</a>
-                    <img src="https://cdn.discordapp.com/avatars/503839000805769216/f136775c2ccdef93f5cde88918a0c506.webp?size=128" class="discord-profile"> 
-            </nav>
-        </nav>
-        <div class="content">
-            <div class="dd" data-aos="fade-up" data-aos-duration="1000">
-                <h1>My name is Kittipon Thanee</h1>
+        <header class="header">
+            <div class="item">
+                <img src="https://cdn.discordapp.com/avatars/503839000805769216/f136775c2ccdef93f5cde88918a0c506.webp?size=128">
+                <p>! ℕ𝔸𝕄𝕆#5179</p>
+            </div>
+            <div class="item">
+                <a href="/">HOME</a>
+                <a href="https://github.com/namo5758">GITHUB</a>
+            </div>
+        </header>
+        <div class="content-position">
+            <div class="content">
+                <h1>HI, I'm Kittipon Thanee</h1>
                 <p>I'm 15 years old, I'm Student at Pakkred Secondary School</p>
                 <p>Skills: C, Nodejs, Python, MySQL, HTML, CSS</p>
+                <a class="btn-project" href="https://github.com/namo5758">MY PROJECT</a>
             </div>
         </div>
-        </div>
+        <footer class="footer">
+            <p>&copy; NAMO5758</p>
+        </footer>
     </div>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
     <script>
         function sss() {
-            let content = setTimeout(showpage, 2000);
+            let content = setTimeout(showpage, 1500);
         }
 
         function showpage(){
