add rawyingpee bot invite

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -24,6 +24,22 @@
                 <a class="btn-project" href="https://github.com/namo5758">MY PROJECT</a>
             </div>
         </div>
+        <div class="rawyingpee">
+            <div class="content-raw">
+                <img src="https://cdn.discordapp.com/avatars/721287837898768456/a8a3c3c2235faee61314ba7e110b232d.webp?size=128">
+                <h1>รอยิงพี่#2845</h1>
+            </div>
+            <div class="set-item">
+                <div class="item" data-aos="fade-up" data-aos-duration="100000">
+                    <h1>/ping</h1>
+                    <h3>reply pong!</h3>
+                </div>
+                <div class="item">
+                    <h1>/nuke</h1>
+                    <h3>Nuke!!</h3>
+                </div>
+            </div>
+        </div>
         <footer class="footer">
             <p>&copy; NAMO5758</p>
         </footer>
@@ -35,7 +51,7 @@
     </script>
     <script>
         function sss() {
-            let content = setTimeout(showpage, 1500);
+            let content = setTimeout(showpage, 0);
         }
 
         function showpage(){
