--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,7 @@ body {
   max-width: 50px;
 }
 .content-position {
-  height: 80vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   padding: 0 10%;
@@ -108,6 +108,7 @@ body {
   line-height: 1.2;
   font-family: 'Kanit', sans-serif;
   color: #8369d0; 
+  animation: textdd 1s 3;
 }
 .content p {
   font-size: 22px;
@@ -138,4 +139,68 @@ body {
   bottom: 0;
   width: 100%;
   text-align: center;
+}
+
+
+.rawyingpee {
+  height: 80vh;
+}
+
+.rawyingpee .content-raw {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.rawyingpee .content-raw img {
+  border-radius: 50%;
+  max-width: 80px;
+  margin: 10px;
+}
+.rawyingpee .set-item {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+}
+
+.rawyingpee .item {
+  margin: 50px;
+  background-color: #8369d0;
+  width: 500px;
+  border-radius: 1rem;
+  text-align: center;
+}
+
+.rawyingpee .item h1 {
+  font-size: 50px;
+  font-weight: 900px;
+  color: white;
+}
+.rawyingpee .item h3 {
+  color: white;
+  font-size: 32px;
+}
+
+.rawyingpee .item:hover {
+  transition: all ease 0.2s;
+  transform: translateY(-5px);
+  background-color: #c77ed2;
+  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+
+.rawyingpee .content-raw h1 {
+  font-family: 'Kanit', sans-serif;
+}
+
+
+@keyframes textdd {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-50%);
+  }
+  100%{
+    transform: translateY(0%);
+  }
 }
