เปลี่ยนนิดหน่อย

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -30,7 +30,7 @@
                 <h1>รอยิงพี่#2845</h1>
             </div>
             <div class="set-item">
-                <div class="item" data-aos="fade-up" data-aos-duration="100000">
+                <div class="item">
                     <h1>/ping</h1>
                     <h3>reply pong!</h3>
                 </div>
