--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,15 +16,15 @@
                 <a href="https://github.com/namo5758">GITHUB</a>
             </div>
         </header>
-        <div class="content-position">
+        <section class="content-position">
             <div class="content">
-                <h1>HI, I'm Kittipon Thanee</h1>
+                <h1 class="myname">HI, I'm Kittipon Thanee</h1>
                 <p>I'm 15 years old, I'm Student at Pakkred Secondary School</p>
                 <p>Skills: C, Nodejs, Python, MySQL, HTML, CSS</p>
-                <a class="btn-project" href="https://github.com/namo5758">MY PROJECT</a>
+                <a class="btn-project" href="https://autumnhubv2.herokuapp.com/">MY PROJECT</a>
             </div>
-        </div>
-        <div class="rawyingpee">
+        </section>
+        <section class="rawyingpee">
             <div class="content-raw">
                 <img src="https://cdn.discordapp.com/avatars/721287837898768456/a8a3c3c2235faee61314ba7e110b232d.webp?size=128">
                 <h1>รอยิงพี่#2845</h1>
@@ -39,7 +39,10 @@
                     <h3>Nuke!!</h3>
                 </div>
             </div>
-        </div>
+            <div class="invite-bot">
+                <button><a href="/">Invite Now</a></button>
+            </div>
+        </section>
         <footer class="footer">
             <p>&copy; NAMO5758</p>
         </footer>
@@ -51,7 +54,7 @@
     </script>
     <script>
         function sss() {
-            let content = setTimeout(showpage, 0);
+            let content = setTimeout(showpage, 1500);
         }
 
         function showpage(){
